src/test/ui/rust-2018/uniform-paths/prelude-fail.stderr
error: cannot import a built-in macro
  --> $DIR/prelude-fail.rs:4:5
   |
LL | use env as env_imported;
   |     ^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `rustfmt`
  --> $DIR/prelude-fail.rs:7:5
   |
LL | use rustfmt::skip as imported_rustfmt_skip;
   |     ^^^^^^^ not a module `rustfmt`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
